PROD-1164 - Fixed overflowing preview iframe

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -856,6 +856,11 @@ ul.medium-editor-toolbar-actions {
 	.activity-video-preview & {
 		float: none;
 		margin: 0 auto;
+
+		p iframe {
+			max-width: 100%;
+		}
+
 	}
 }
 
